/*
Copyright 2012 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// # Protobuf compiling cheat sheet:
// protoc --go_out=. --go-grpc_out=. -I /usr/local/include -I ${PWD}
//   --go-grpc_opt=require_unimplemented_servers=false \
//   groupcachepb/groupcache.proto

syntax = "proto2";

package groupcachepb;
option go_package = "groupcachepb/";

import "google/protobuf/empty.proto";

message GetRequest {
  required string group = 1;
  required string key = 2; // not actually required/guaranteed to be UTF-8
}

message GetResponse {
  optional bytes value = 1;
  optional double minute_qps = 2;
}

message SetRequest {
  required string group = 1;
  required string key = 2; // not actually required/guaranteed to be UTF-8
  required bytes value = 3;
}

message DeleteRequest {
  required string group = 1;
  required string key = 2; // not actually required/guaranteed to be UTF-8
}

service GroupCache {
  rpc Get(GetRequest) returns (GetResponse) {
  };
  rpc Set(SetRequest) returns (google.protobuf.Empty) {
  };
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
  };
}
